tests/samples/negative/types/recursive_struct_value.ax
module recursive_struct_value;

struct Node {
  value: i32;
  next: Node;
}

fn main() -> i32 {
  return 0;
}
